Inline amount input and mint CTA for tighter layout

--- a/index.html
+++ b/index.html
@@ -123,11 +123,16 @@
           <div class="pill">1 oz = 100 TPC</div>
         </div>
 
-        <div class="input-row">
-          <label for="slvrInput">TPC amount</label>
-          <div class="input-wrap">
-            <input id="slvrInput" type="number" min="0" step="1" value="200" />
-            <span class="suffix">TPC</span>
+        <div class="input-actions">
+          <div class="input-row">
+            <label for="slvrInput">TPC amount</label>
+            <div class="input-wrap">
+              <input id="slvrInput" type="number" min="0" step="1" value="200" />
+              <span class="suffix">TPC</span>
+            </div>
+          </div>
+          <div class="cta-row inline">
+            <button id="mintButton" class="primary wide">Swap & Mint</button>
           </div>
         </div>
 
@@ -152,10 +157,6 @@
             <div class="value">4%</div>
             <div class="sub">Fixed over spot</div>
           </div>
-        </div>
-
-        <div class="cta-row">
-          <button id="mintButton" class="primary wide">Swap & Mint</button>
         </div>
 
         <div class="hint">
