Align mint CTA with input by separating label from grid

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
           <div class="pill">1 oz = 100 TPC</div>
         </div>
 
+        <div class="input-header">
+          <label for="slvrInput">TPC amount</label>
+        </div>
         <div class="input-actions">
-          <div class="input-row">
-            <label for="slvrInput">TPC amount</label>
-            <div class="input-wrap">
-              <input id="slvrInput" type="number" min="0" step="1" value="200" />
-              <span class="suffix">TPC</span>
-            </div>
+          <div class="input-wrap">
+            <input id="slvrInput" type="number" min="0" step="1" value="200" />
+            <span class="suffix">TPC</span>
           </div>
           <div class="cta-row inline">
             <button id="mintButton" class="primary wide">Swap & Mint</button>
