Add wallet ETH balance card and live balance fetch

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
             <div class="value" id="walletStatus">Not connected</div>
             <div class="sub">Metamask | ERC20</div>
           </div>
+          <div class="stat-card">
+            <div class="label">Wallet ETH</div>
+            <div class="value" id="walletEthBalance">--</div>
+            <div class="sub">Live balance</div>
+          </div>
         </div>
       </section>
 
