Track wallet ETH balance and total minted stats

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
             <div class="value" id="walletEthBalance">--</div>
             <div class="sub">Live balance</div>
           </div>
+          <div class="stat-card">
+            <div class="label">Total minted</div>
+            <div class="value" id="totalMintedAmount">--</div>
+            <div class="sub">Cumulative ounces</div>
+          </div>
+          <div class="stat-card">
+            <div class="label">Total minted value</div>
+            <div class="value" id="totalMintedValueFiat">--</div>
+            <div class="sub" id="totalMintedValueEth">--</div>
+          </div>
         </div>
       </section>
 
