--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
             <div class="sub">Live balance</div>
           </div>
           <div class="stat-card">
+            <div class="label">Wallet TPC</div>
+            <div class="value" id="walletTpcBalance">--</div>
+            <div class="sub">Balance (not yet live)</div>
+          </div>
+          <div class="stat-card">
             <div class="label">Total minted</div>
             <div class="value" id="totalMintedAmount">--</div>
             <div class="sub">Cumulative ounces</div>
