Adjust TPC balance label copy

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="stat-card">
             <div class="label">Wallet TPC</div>
             <div class="value" id="walletTpcBalance">--</div>
-            <div class="sub">Balance (not yet live)</div>
+            <div class="sub">Balance</div>
           </div>
           <div class="stat-card">
             <div class="label">Total minted</div>
