Update fiat labels when switching to AUD

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="stat-card">
             <div class="label">Spot Silver</div>
             <div class="value" id="spotPrice">$--</div>
-            <div class="sub">Live per oz (USD)</div>
+            <div class="sub" id="spotFiatSub">Live per oz (USD)</div>
           </div>
           <div class="stat-card">
             <div class="label">Mint Price</div>
