Make ETH rate label dynamic per currency

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div class="summary-item">
             <div class="label">ETH to send</div>
             <div class="value" id="ethValue">-- ETH</div>
-            <div class="sub">Live ETH/USD</div>
+            <div class="sub" id="ethValueLabel">Live ETH/USD</div>
           </div>
           <div class="summary-item">
             <div class="label">Per oz premium</div>
