Clarify ETH spend in settlement copy

--- a/index.html
+++ b/index.html
@@ -210,7 +210,11 @@
         </div>
         <div class="info-card">
           <h3>On-chain settlement</h3>
-          <p>Connect Wallet of choice, approve SLVR spend and sign mint tx (not sure what this means). We never take custody of your wallet keys.</p>
+          <p>
+            Connect your Metamask wallet, approve ETH spend and sign the mint transaction.
+            <br />
+            We don't store any private keys. Tokens are always held in your non-custodial wallet.
+          </p>
         </div>
         <div class="info-card">
           <h3>Transparent & stable Pricing</h3>
