--- a/index.html
+++ b/index.html
@@ -8,6 +8,52 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <style>
+    .logo,
+    .footer-brand {
+      display: inline-flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .logo::before,
+    .footer-brand::before,
+    .mark {
+      display: none !important;
+      content: none !important;
+    }
+
+    .logo-image {
+      height: 48px;
+      width: auto;
+      display: block;
+    }
+
+    .footer-brand .logo-image {
+      height: 40px;
+    }
+
+    .footer-brand {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .footer-brand .brand {
+      color: #fff;
+    }
+
+    .footer-grid {
+      margin-left: 0;
+      column-gap: 32px;
+    }
+
+    @media (min-width: 900px) {
+      .footer-grid {
+        margin-left: 40px;
+        column-gap: 64px;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="page">
@@ -16,7 +62,7 @@
         <div class="nav-bar">
           <div class="nav-left">
             <a class="logo" href="/">
-              <div class="mark">TP</div>
+              <img src="logo.png" alt="The People's Co-operation logo" class="logo-image">
           <div>
             <div class="brand">The People's Co-operation</div>
             <div class="tag">Silver-backed on ERC20</div>
@@ -47,7 +93,7 @@
             <a class="nav-link" href="#mintModule">Mint</a>
             <a class="nav-link" href="#feed">Activity</a>
             <a class="nav-link" href="#info">Vault</a>
-            <a class="nav-link" href="/new-to-crypto/">New to Crypto?</a>
+            <a class="nav-link" href="https://tpc-silver.com/how-to">New to Crypto?</a>
           </nav>
           <div class="nav-sub-aux">
             <div class="eyebrow-badge">On-chain silver vault</div>
@@ -74,7 +120,7 @@
           <a class="nav-link" href="#info">Vault</a>
         </div>
         <div class="mobile-menu-group">
-          <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
+          <a href="https://tpc-silver.com/how-to" class="nav-link">New to Crypto?</a>
         </div>
         <div class="mobile-menu-group">
           <button id="refreshPriceMobile" class="ghost wide">Refresh price</button>
@@ -227,7 +273,7 @@
       <div class="footer-shell">
         <div class="footer-top">
           <div class="footer-brand">
-            <div class="mark">TP</div>
+            <img src="logo.png" alt="The People's Co-operation logo" class="logo-image">
             <div>
               <div class="brand">The People's Co-operation</div>
               <div class="tag">Metal-backed digital assets</div>
@@ -242,9 +288,9 @@
             </div>
             <div class="footer-column">
               <div class="footer-heading">Company</div>
-              <a href="/new-to-crypto/">New to Crypto?</a>
-              <a href="/terms">Terms & Conditions</a>
-              <a href="/privacy">Privacy</a>
+              <a href="https://tpc-silver.com/how-to">New to Crypto?</a>
+              <a href="https://tpc-silver.com/privacy-terms">Privacy Policy / Terms</a>
+              <a href="https://tpc-silver.com/disclaimer">Disclaimer</a>
             </div>
             <div class="footer-column">
               <div class="footer-heading">Support</div>
