Add fixed AUD 0.40 maintenance charge to mint pricing

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </nav>
           <div class="nav-sub-aux">
             <div class="eyebrow-badge">On-chain silver vault</div>
-            <div class="nav-subtext">Insured storage | 4% + A$0.40 mint premium | Live pricing feeds</div>
+            <div class="nav-subtext">Insured storage | 4% + A$0.40 maintenance charges | Live pricing feeds</div>
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
           <div class="stat-card">
             <div class="label">Mint Price</div>
             <div class="value" id="mintPrice">$--</div>
-            <div class="sub">4% + A$0.40 premium</div>
+            <div class="sub">4% + A$0.40 maintenance charges</div>
           </div>
           <div class="stat-card">
             <div class="label">Mint balance</div>
@@ -220,7 +220,7 @@
           </div>
           <div class="summary-item">
           <div class="label">Per coin premium</div>
-          <div class="value">4% + A$0.40</div>
+          <div class="value">4% + A$0.40 maintenance charges</div>
           <div class="sub">Fixed over spot</div>
           </div>
         </div>
@@ -264,7 +264,7 @@
         </div>
         <div class="info-card">
           <h3>Transparent & stable Pricing</h3>
-          <p>We pull spot from our suppliers site and lock a 4% premium + A$0.40 on Silver Coin only. Storage, transport and documentation passed on at cost price (included in purchase price.)</p>
+          <p>We pull spot from our suppliers site and lock a 4% premium + A$0.40 maintenance charges on Silver Coin only. Storage, transport and documentation passed on at cost price (included in purchase price.)</p>
         </div>
       </section>
 
