--- a/new-to-crypto/index.html
+++ b/new-to-crypto/index.html
@@ -97,7 +97,7 @@
           </nav>
           <div class="nav-sub-aux">
             <div class="eyebrow-badge">On-chain silver vault</div>
-            <div class="nav-subtext">Insured storage | 4% + A$0.40 mint premium | Live pricing feeds</div>
+            <div class="nav-subtext">Insured storage | 4% + A$0.40 maintenance charges | Live pricing feeds</div>
           </div>
         </div>
       </div>
