Tweak per-coin premium copy styling

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
             <div class="sub" id="ethValueLabel">Live ETH/AUD</div>
           </div>
           <div class="summary-item">
-          <div class="label">Per coin premium</div>
-          <div class="value">4% + A$0.40 maintenance charges</div>
-          <div class="sub">Fixed over spot</div>
+            <div class="label">Per coin premium</div>
+            <div class="value">4% + A$0.40</div>
+            <div class="sub">Maintenance charges | Fixed over spot</div>
           </div>
         </div>
 
